--- a/charts/grafana/templates/pvc.yaml
+++ b/charts/grafana/templates/pvc.yaml
@@ -22,11 +22,9 @@ spec:
   resources:
     requests:
       storage: {{ .Values.persistence.size | quote }}
-{{- if (eq "fullname" .Values.persistence.storageClassName) }}
-  storageClassName: "{{ template "grafana.fullname" . }}"
-{{- else }}
-  storageClassName: "{{ .Values.persistence.storageClassName }}"
-{{- end }}
+  {{- if .Values.persistence.storageClassName }}
+  storageClassName: {{ .Values.persistence.storageClassName }}
+  {{- end -}}
   {{- with .Values.persistence.selectorLabels }}
   selector:
     matchLabels:
