fixed affinity to support k8s 1.24 control-plane nodes

--- a/charts/couchdb/values.yaml
+++ b/charts/couchdb/values.yaml
@@ -112,6 +112,10 @@ affinity:
       - matchExpressions:
         - key: node-role.kubernetes.io/master
           operator: Exists
+      nodeSelectorTerms:
+      - matchExpressions:
+        - key: node-role.kubernetes.io/control-plane
+          operator: Exists
   # podAntiAffinity:
   #   requiredDuringSchedulingIgnoredDuringExecution:
   #     - labelSelector:
