--- a/charts/docker-registry/values.yaml
+++ b/charts/docker-registry/values.yaml
@@ -179,6 +179,10 @@ affinity:
       - matchExpressions:
         - key: node-role.kubernetes.io/master
           operator: Exists
+      nodeSelectorTerms:
+      - matchExpressions:
+        - key: node-role.kubernetes.io/control-plane
+          operator: Exists
 
 tolerations: []
 
