--- a/charts/meep-gis-engine/values-template.yaml
+++ b/charts/meep-gis-engine/values-template.yaml
@@ -65,3 +65,7 @@ affinity:
       - matchExpressions:
         - key: node-role.kubernetes.io/master
           operator: Exists
+      nodeSelectorTerms:
+      - matchExpressions:
+        - key: node-role.kubernetes.io/control-plane
+          operator: Exists
