--- a/charts/postgis/values.yaml
+++ b/charts/postgis/values.yaml
@@ -346,6 +346,10 @@ master:
         - matchExpressions:
           - key: node-role.kubernetes.io/master
             operator: Exists
+        nodeSelectorTerms:
+        - matchExpressions:
+          - key: node-role.kubernetes.io/control-plane
+            operator: Exists
 
   tolerations: []
   labels: {}
@@ -404,6 +408,10 @@ slave:
         nodeSelectorTerms:
         - matchExpressions:
           - key: node-role.kubernetes.io/master
+            operator: Exists
+        nodeSelectorTerms:
+        - matchExpressions:
+          - key: node-role.kubernetes.io/control-plane
             operator: Exists
 
   tolerations: []
