--- a/charts/open-map-tiles/values.yaml
+++ b/charts/open-map-tiles/values.yaml
@@ -62,5 +62,9 @@ affinity:
       - matchExpressions:
         - key: node-role.kubernetes.io/master
           operator: Exists
+      nodeSelectorTerms:
+      - matchExpressions:
+        - key: node-role.kubernetes.io/control-plane
+          operator: Exists
 
 meepOrigin: core
