--- a/charts/cert-manager/Chart.yaml
+++ b/charts/cert-manager/Chart.yaml
@@ -1,7 +1,12 @@
+annotations:
+  artifacthub.io/prerelease: "false"
+  artifacthub.io/signKey: |
+    fingerprint: 1020CF3C033D4F35BAE1C19E1226061C665DF13E
+    url: https://cert-manager.io/public-keys/cert-manager-keyring-2021-09-20-1020CF3C033D4F35BAE1C19E1226061C665DF13E.gpg
 apiVersion: v1
-appVersion: v1.0.3
+appVersion: v1.8.0
 description: A Helm chart for cert-manager
-home: https://github.com/jetstack/cert-manager
+home: https://github.com/cert-manager/cert-manager
 icon: https://raw.githubusercontent.com/jetstack/cert-manager/master/logo/logo.png
 keywords:
 - cert-manager
@@ -9,9 +14,9 @@ keywords:
 - letsencrypt
 - tls
 maintainers:
-- email: james@jetstack.io
-  name: munnerz
+- email: cert-manager-maintainers@googlegroups.com
+  name: cert-manager-maintainers
 name: cert-manager
 sources:
-- https://github.com/jetstack/cert-manager
-version: v1.0.3
+- https://github.com/cert-manager/cert-manager
+version: v1.8.0
