--- a/playbooks/roles/helm/tasks/main.yml
+++ b/playbooks/roles/helm/tasks/main.yml
@@ -2,9 +2,9 @@
 - name: Assert OS is Ubuntu 18.04
   assert:
     that:
-      - ansible_distribution == 'Ubuntu'
-      - ansible_distribution_major_version == '18'
-      - ansible_distribution_version == '18.04'
+      - ansible_distribution == "{{ ubuntu_dist }}"
+      - ansible_distribution_major_version == "{{ ubuntu_dist_major }}"
+      - ansible_distribution_version == "{{ ubuntu_dist_version }}"
     quiet: yes
 
 - name: Remove Helm
