--- a/playbooks/roles/kubernetes/common/tasks/main.yml
+++ b/playbooks/roles/kubernetes/common/tasks/main.yml
@@ -3,9 +3,9 @@
 - name: Assert OS is Ubuntu 18.04
   assert:
     that:
-      - ansible_distribution == 'Ubuntu'
-      - ansible_distribution_major_version == '18'
-      - ansible_distribution_version == '18.04'
+      - ansible_distribution == "{{ ubuntu_dist }}"
+      - ansible_distribution_major_version == "{{ ubuntu_dist_major }}"
+      - ansible_distribution_version == "{{ ubuntu_dist_version }}"
     quiet: yes
 
 - name: Gather package facts
@@ -21,7 +21,7 @@
 - name: Assert currently installed Kubernetes version is supported
   assert:
     that:
-      - installed_k8s_version is match("1.15.*")
+      - installed_k8s_version is match("{{ kube_version }}*")
     quiet: yes
   when:
     - installed_k8s_version is defined
