--- a/.meepctl-repocfg.yaml
+++ b/.meepctl-repocfg.yaml
@@ -38,7 +38,7 @@ repo:
     # platform ingress configuration
     ingress:
       # host name
-      host: my-platform-fqdn
+      host: 10.3.16.69
       # enable https only (redirect http requests to https port)
       https-only: false
       # bind to host ports (true) or node ports (false)
