--- a/charts/meep-mg-manager/templates/deployment.yaml
+++ b/charts/meep-mg-manager/templates/deployment.yaml
@@ -31,10 +31,6 @@ spec:
       containers:
         - name: {{ .Chart.Name }}
           image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
-          {{- if .Values.codecov.enabled}}
-          command: [ "/meep-mg-manager" ]
-          args: [ "-test.coverprofile=/codecov/codecov-meep-mg-manager.out", "__DEVEL--code-cov" ]
-          {{- end}}
           imagePullPolicy: {{ .Values.image.pullPolicy }}
           ports:
             - containerPort: {{ .Values.deployment.port }}
@@ -42,7 +38,7 @@ spec:
           env:
             {{- range $key, $value := .Values.image.env }}
             - name: {{ $key }}
-              value: {{ $value }}
+              value: {{ $value | quote }}
             {{- end }}
           {{- if .Values.codecov.enabled}}
           volumeMounts:
