--- a/charts/meep-platform-ctrl/templates/deployment.yaml
+++ b/charts/meep-platform-ctrl/templates/deployment.yaml
@@ -36,10 +36,6 @@ spec:
       containers:
         - name: {{ .Chart.Name }}
           image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
-          {{- if .Values.codecov.enabled}}
-          command: [ "/meep-platform-ctrl" ]
-          args: [ "-test.coverprofile=/codecov/codecov-meep-platform-ctrl.out", "__DEVEL--code-cov" ]
-          {{- end}}
           imagePullPolicy: {{ .Values.image.pullPolicy }}
           ports:
             - containerPort: {{ .Values.deployment.port }}
@@ -47,7 +43,7 @@ spec:
           env:
             {{- range $key, $value := .Values.image.env }}
             - name: {{ $key }}
-              value: {{ $value }}
+              value: {{ $value | quote}}
             {{- end }}
             {{- range $key, $value := .Values.image.envSecret }}
             - name: {{ $key }}
