--- a/charts/meep-virt-engine/templates/deployment.yaml
+++ b/charts/meep-virt-engine/templates/deployment.yaml
@@ -41,10 +41,6 @@ spec:
       containers:
         - name: {{ .Chart.Name }}
           image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
-          {{- if .Values.codecov.enabled}}
-          command: [ "/meep-virt-engine" ]
-          args: [ "-test.coverprofile=/codecov/codecov-meep-virt-engine.out", "__DEVEL--code-cov" ]
-          {{- end}}
           imagePullPolicy: {{ .Values.image.pullPolicy }}
           ports:
             - containerPort: {{ .Values.deployment.port }}
@@ -52,7 +48,7 @@ spec:
           env:
             {{- range $key, $value := .Values.image.env }}
             - name: {{ $key }}
-              value: {{ $value }}
+              value: {{ $value | quote }}
             {{- end }}
             {{- range $key, $value := .Values.image.envSecret }}
             - name: {{ $key }}
