--- a/js-apps/meep-frontend/package.json
+++ b/js-apps/meep-frontend/package.json
@@ -55,6 +55,7 @@
     "mapbox-gl-leaflet": "0.0.12",
     "material-components-web": "0.41.1",
     "material-design-icons": "3.0.1",
+    "mermaid": "^9.1.6",
     "prop-types": "15.6.2",
     "react": "^16.8.6",
     "react-autobind": "^1.0.6",
@@ -67,6 +68,7 @@
     "react-split-pane": "^0.1.87",
     "react-tooltip": "^3.10.0",
     "react-virtualized": "^9.21.2",
+    "react-zoom-pan-pinch": "^2.1.3",
     "redux": "^4.0.1",
     "redux-thunk": "^2.3.0",
     "reselect": "^4.0.0",
